--- a/.github/workflows/deploy-sample-app-argocd.yml
+++ b/.github/workflows/deploy-sample-app-argocd.yml
@@ -20,9 +20,10 @@ jobs:
 
       - name: Install kubectl (if missing)
         run: |
-          if ! command -v kubectl &>/dev/null; then
-            sudo apt-get update -y
-            sudo apt-get install -y kubectl
+          if ! command -v kubectl >/dev/null 2>&1; then
+            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+            chmod +x kubectl
+            sudo mv kubectl /usr/local/bin/kubectl
           fi
           kubectl version --client
 
@@ -31,56 +32,49 @@ jobs:
           aws eks update-kubeconfig --region eu-west-1 --name nti-nonprod-eks
           kubectl get nodes
 
-      - name: Delete old conflicting ArgoCD application (if exists)
-        continue-on-error: true
-        run: |
-          kubectl delete application sample-app-nonprod -n argocd --ignore-not-found=true
-          kubectl delete application sample-app-old -n argocd --ignore-not-found=true
-
       - name: Get latest ECR image tag
+        id: ecr
         run: |
+          REPO_NAME="cloud-native-sample-app"
+
           LATEST_TAG=$(aws ecr describe-images \
-            --repository-name cloud-native-sample-app \
-            --region eu-west-1 \
+            --repository-name $REPO_NAME \
             --query 'sort_by(imageDetails,& imagePushedAt)[-1].imageTags[0]' \
             --output text)
 
-          echo "LATEST_TAG=$LATEST_TAG" >> $GITHUB_ENV
-          echo "Latest tag found: $LATEST_TAG"
+          echo "LATEST_TAG=$LATEST_TAG"
+          echo "latest_tag=$LATEST_TAG" >> $GITHUB_OUTPUT
 
-      - name: Update deployment image tag
+      - name: Update deployment image tag in GitOps manifests
         run: |
-          sed -i "s|image: .*cloud-native-sample-app:.*|image: 842303506852.dkr.ecr.eu-west-1.amazonaws.com/cloud-native-sample-app:$LATEST_TAG|g" gitops/nonprod/sample-app/deployment.yaml
-          echo "Deployment updated with latest tag:"
-          cat gitops/nonprod/sample-app/deployment.yaml
+          TAG="${{ steps.ecr.outputs.latest_tag }}"
+          FILE="gitops/nonprod/sample-app/deployment.yaml"
+
+          sed -i "s|image: .*cloud-native-sample-app:.*|image: 842303506852.dkr.ecr.eu-west-1.amazonaws.com/cloud-native-sample-app:${TAG}|g" $FILE
+
+          echo "Updated deployment.yaml with tag: $TAG"
+          cat $FILE
+
+      - name: Commit & Push changes
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+
+          git add gitops/nonprod/sample-app/deployment.yaml
+          git commit -m "Update sample-app image tag to latest" || echo "No changes to commit"
+          git push origin main
 
       - name: Apply ArgoCD Application
         run: |
           kubectl apply -f gitops/nonprod/argocd/sample-app-application.yaml
 
-      - name: Wait for ArgoCD application to be Healthy and Synced
+      - name: Wait for pods to be Ready
         run: |
-          echo "Waiting for ArgoCD Application to be Healthy..."
-
-          for i in {1..60}; do
-            HEALTH=$(kubectl get application sample-app -n argocd -o jsonpath='{.status.health.status}' 2>/dev/null || echo "NotFound")
-            SYNC=$(kubectl get application sample-app -n argocd -o jsonpath='{.status.sync.status}' 2>/dev/null || echo "OutOfSync")
-
-            echo "Health: $HEALTH | Sync: $SYNC"
-
-            if [[ "$HEALTH" == "Healthy" && "$SYNC" == "Synced" ]]; then
-              echo "Application is Healthy and Synced ✅"
-              exit 0
-            fi
-
-            sleep 10
-          done
-
-          echo "Application did not become Healthy in time ❌"
-          kubectl get application sample-app -n argocd -o yaml
-          exit 1
+          kubectl rollout status deployment/sample-app -n default --timeout=300s
 
       - name: Show Ingress URL
         run: |
-          kubectl get ingress -A
-          kubectl get svc -n ingress-nginx
+          kubectl get ingress -n default
+          echo "Ingress URL:"
+          kubectl get ingress sample-app-ingress -n default -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'
+          echo ""
