--- a/.github/workflows/deploy-sample-app-argocd.yml
+++ b/.github/workflows/deploy-sample-app-argocd.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Install kubectl (if missing)
         run: |
           if ! command -v kubectl >/dev/null 2>&1; then
+            echo "kubectl not found, installing..."
             curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
             chmod +x kubectl
             sudo mv kubectl /usr/local/bin/kubectl
@@ -48,6 +49,12 @@ jobs:
             --output text)
 
           echo "LATEST_TAG=$LATEST_TAG"
+
+          if [ "$LATEST_TAG" = "None" ] || [ -z "$LATEST_TAG" ]; then
+            echo "❌ No image tag found in ECR repository!"
+            exit 1
+          fi
+
           echo "latest_tag=$LATEST_TAG" >> $GITHUB_OUTPUT
 
       - name: Update deployment image tag in GitOps manifests
@@ -55,9 +62,11 @@ jobs:
           TAG="${{ steps.ecr.outputs.latest_tag }}"
           FILE="gitops/nonprod/sample-app/deployment.yaml"
 
+          echo "Updating deployment.yaml with tag: $TAG"
+
           sed -i "s|image: .*cloud-native-sample-app:.*|image: 842303506852.dkr.ecr.eu-west-1.amazonaws.com/cloud-native-sample-app:${TAG}|g" $FILE
 
-          echo "Updated deployment.yaml with tag: $TAG"
+          echo "Updated deployment.yaml:"
           cat $FILE
 
       - name: Commit & Push changes
@@ -73,9 +82,30 @@ jobs:
         run: |
           kubectl apply -f gitops/nonprod/argocd/sample-app-application.yaml
 
-      - name: Wait for pods to be Ready
+      - name: Wait for ArgoCD sync
         run: |
-          kubectl rollout status deployment/sample-app -n default --timeout=300s
+          echo "Waiting 60 seconds for ArgoCD to sync..."
+          sleep 60
+
+      - name: Wait for pods to be Ready (with debug)
+        run: |
+          echo "Waiting for deployment rollout..."
+          kubectl rollout status deployment/sample-app -n default --timeout=300s || true
+
+          echo "========== Pods =========="
+          kubectl get pods -n default -o wide
+
+          echo "========== Describe Deployment =========="
+          kubectl describe deployment sample-app -n default
+
+          echo "========== Describe Pods =========="
+          kubectl describe pods -n default -l app=sample-app
+
+          echo "========== Logs =========="
+          kubectl logs -n default -l app=sample-app --tail=200 || true
+
+          echo "❌ Deployment failed to become ready."
+          exit 1
 
       - name: Show Ingress URL
         run: |
