--- a/gitops/nonprod/sample-app/deployment.yaml
+++ b/gitops/nonprod/sample-app/deployment.yaml
@@ -33,18 +33,16 @@ spec:
               value: "messages"
 
           readinessProbe:
-            httpGet:
-              path: /health
+            tcpSocket:
               port: 3000
-            initialDelaySeconds: 10
+            initialDelaySeconds: 15
             periodSeconds: 10
-            failureThreshold: 3
+            failureThreshold: 5
 
           livenessProbe:
-            httpGet:
-              path: /health
+            tcpSocket:
               port: 3000
-            initialDelaySeconds: 20
+            initialDelaySeconds: 30
             periodSeconds: 15
             failureThreshold: 5
 
