--- a/gitops/nonprod/sample-app/clustersecretstore.yaml
+++ b/gitops/nonprod/sample-app/clustersecretstore.yaml
@@ -1,8 +1,7 @@
 apiVersion: external-secrets.io/v1beta1
-kind: SecretStore
+kind: ClusterSecretStore
 metadata:
   name: aws-ssm-store
-  namespace: default
 spec:
   provider:
     aws:
