--- a/gitops/nonprod/sample-app/externalsecret.yaml
+++ b/gitops/nonprod/sample-app/externalsecret.yaml
@@ -7,7 +7,7 @@ spec:
   refreshInterval: 1m
   secretStoreRef:
     name: aws-ssm-store
-    kind: SecretStore
+    kind: ClusterSecretStore
   target:
     name: mongo-secret
     creationPolicy: Owner
