--- a/gitops/nonprod/sample-app/kustomization.yaml
+++ b/gitops/nonprod/sample-app/kustomization.yaml
@@ -2,5 +2,5 @@ resources:
   - deployment.yaml
   - service.yaml
   - ingress.yaml
-  - secretstore.yaml
+  - clustersecretstore.yaml
   - externalsecret.yaml
