--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,29 @@
-name: CI - Build & Push Docker Images
+name: CI - Build Push + Update GitOps
 
 on:
-  workflow_dispatch:
   push:
     branches:
       - main
     paths:
-      - "app/**"
-      - "mongo-writer/**"
-      - ".github/workflows/ci.yml"
-
-env:
-  AWS_REGION: eu-west-1
-  ECR_REPOSITORY_APP: cloud-native-sample-app
-  ECR_REPOSITORY_WRITER: cloud-native-mongo-writer
+      - app/**
+      - mongo-writer/**
+      - gitops/**
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+
+    env:
+      AWS_REGION: eu-west-1
+      AWS_ACCOUNT_ID: 842303506852
+      ECR_REPO_APP: cloud-native-sample-app
+      ECR_REPO_WRITER: cloud-native-mongo-writer
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Configure AWS credentials
+      - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -31,64 +31,48 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Set Image Tag
         run: |
-          echo "IMAGE_TAG=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          aws ecr get-login-password --region $AWS_REGION | \
+          docker login --username AWS --password-stdin \
+          $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
 
-      # ======================================================
-      # Build & Push Voting App Image
-      # ======================================================
-      - name: Build and Push Voting App Image
+      - name: Build & Push Sample App Image
         run: |
-          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          IMAGE_URI_APP=$ACCOUNT_ID.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY_APP}:${IMAGE_TAG}
+          IMAGE_TAG=${GITHUB_SHA::7}
+          docker build -t $ECR_REPO_APP:$IMAGE_TAG ./app
+          docker tag $ECR_REPO_APP:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_APP:$IMAGE_TAG
+          docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_APP:$IMAGE_TAG
 
-          echo "Building Voting App Image..."
-          docker build -t $IMAGE_URI_APP ./app
-          docker push $IMAGE_URI_APP
-
-          echo "IMAGE_URI_APP=$IMAGE_URI_APP" >> $GITHUB_ENV
-          echo "Voting App pushed: $IMAGE_URI_APP"
-
-      # ======================================================
-      # Build & Push Mongo Writer Image
-      # ======================================================
-      - name: Build and Push Mongo Writer Image
+      - name: Build & Push Mongo Writer Image
         run: |
-          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          IMAGE_URI_WRITER=$ACCOUNT_ID.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY_WRITER}:${IMAGE_TAG}
+          IMAGE_TAG=${GITHUB_SHA::7}
+          docker build -t $ECR_REPO_WRITER:$IMAGE_TAG ./mongo-writer
+          docker tag $ECR_REPO_WRITER:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_WRITER:$IMAGE_TAG
+          docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_WRITER:$IMAGE_TAG
 
-          echo "Building Mongo Writer Image..."
-          docker build -t $IMAGE_URI_WRITER ./mongo-writer
-          docker push $IMAGE_URI_WRITER
-
-          echo "IMAGE_URI_WRITER=$IMAGE_URI_WRITER" >> $GITHUB_ENV
-          echo "Mongo Writer pushed: $IMAGE_URI_WRITER"
-
-      # ======================================================
-      # Update GitOps Manifests
-      # ======================================================
-      - name: Update GitOps Deployment Image Tags
+      - name: Update GitOps Manifests Automatically
         run: |
-          sed -i "s|image:.*cloud-native-sample-app:.*|image: ${IMAGE_URI_APP}|g" gitops/nonprod/sample-app/deployment.yaml
-          sed -i "s|image:.*cloud-native-mongo-writer:.*|image: ${IMAGE_URI_WRITER}|g" gitops/nonprod/sample-app/mongo-writer-deployment.yaml
+          IMAGE_TAG=${GITHUB_SHA::7}
 
-      - name: Commit & Push GitOps changes
+          echo "Updating GitOps manifests to tag: $IMAGE_TAG"
+
+          sed -i "s|image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_APP:.*|image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_APP:$IMAGE_TAG|g" gitops/nonprod/sample-app/deployment.yaml
+
+          sed -i "s|image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_WRITER:.*|image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_WRITER:$IMAGE_TAG|g" gitops/nonprod/sample-app/mongo-writer-deployment.yaml
+
+          cat gitops/nonprod/sample-app/deployment.yaml | grep image
+          cat gitops/nonprod/sample-app/mongo-writer-deployment.yaml | grep image
+
+      - name: Commit & Push GitOps Updates
         run: |
+          IMAGE_TAG=${GITHUB_SHA::7}
+
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
 
           git add gitops/nonprod/sample-app/deployment.yaml
           git add gitops/nonprod/sample-app/mongo-writer-deployment.yaml
 
-          git commit -m "Update images to ${IMAGE_TAG}" || echo "No changes to commit"
+          git commit -m "Update images to $IMAGE_TAG" || echo "No changes to commit"
 
-          git pull --rebase origin main
           git push origin main
-
-      - name: Print Image URIs
-        run: |
-          echo "Voting App Image: ${IMAGE_URI_APP}"
-          echo "Mongo Writer Image: ${IMAGE_URI_WRITER}"
